Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

30-May-2011 Mark Dexter
 # [#26004] *Back-end language change broken by framework patch in tracker #25925

26-May-2011 Mark Dexter
 # [#25733] Direct access as no defined('_JEXEC') or die; in com_mailto/helpers/mailto.php
 # [#25919] com_contact: onSubmitContact $post variable
 # [#25915] inconsistent beahviour com_content / com_wrapper
 # [#25790] Some queries not correctly dealing with trash
 # [#25925] Platform sync: new getUserState default argument; JAccess:getActions fix
 # [#25462] Unable to run scriptfile on plg_editors-xtd type plugin
 # [#25941] Menu Item Help URL Not Translated
 # Revert 25790 (breaks Featured Articles)
 # [#25452] No JavaScript form validation on users reset and remind page

24-May-2011 Mark Dexter
 # [#25908] Code Style improvements for the installation

18-May-2011 Christophe Demko
 # [#25679] Typo of pagination parts (as default value) (bill richardson, masanori yamamoto)
 # [#25447] New feature: Add Site name after Page title (Piotr Mocko)
 # [#25839] No "new item"-button on frontend categroylist-view when there are not articles in category (Michael Babker)

17-May-2011 Christophe Demko
 # [#25894] *Fatal Error: JDocumentFeed disabled (Jean-Marie Simonet)

15-May-2011 Jean-Marie Simonet
 #$ [#23490] Remove option to compress the JS for Tiny MCE. Thanks Rouven.

14-May-2011 Jean-Marie Simonet
 # [#25082] Update Mootools to version 1.3.2. Thanks Rouven, Michael
 # [#25850] Incorrect ordering of plugins type filter. Thanks Dennis.
 # [#25754] Removing double semi-colons. Thanks Dennis
 # [#25681] IE <= 7 and Beez templates - Incorrect mouse pointer over open/close "button" if right column is visible. Thanks Peter.
 
14-May-2011 Christophe Demko