@@ -31,7 +31,7 @@ defined('_JEXEC') or die;
 	<tbody>
 	<?php foreach ($list as $i=>$item) : ?>
 		<tr>
-			<td>
+			<th scope="row">
 				<?php if ($item->checked_out) : ?>
 						<?php echo JHtml::_('jgrid.checkedout', $i, $item->editor, $item->checked_out_time); ?>
 				<?php endif; ?>
@@ -42,7 +42,7 @@ defined('_JEXEC') or die;
 				<?php else :
 					echo htmlspecialchars($item->title, ENT_QUOTES, 'UTF-8');
 				endif; ?>
-			</td>
+			</th>
 			<td class="center">
 				<?php echo JHtml::_('jgrid.published', $item->state, $i, '', false); ?>
 			</td>
