@@ -29,7 +29,7 @@ defined('_JEXEC') or die;
 	<tbody>
 	<?php foreach ($list as $i=>$item) : ?>
 		<tr>
-			<td>
+			<th scope="row">
 				<?php if ($item->checked_out) : ?>
 						<?php echo JHtml::_('jgrid.checkedout', $i, $item->editor, $item->checked_out_time); ?>
 				<?php endif; ?>
@@ -40,7 +40,7 @@ defined('_JEXEC') or die;
 				<?php else :
 					echo htmlspecialchars($item->title, ENT_QUOTES, 'UTF-8');
 				endif; ?>
-			</td>
+			</th>
 			<td class="center">
 				<?php echo JHtml::_('date',$item->created, 'Y-m-d H:i:s'); ?>
 			</td>
