@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 30-May-2011 Mark Dexter
  # [#26004] *Back-end language change broken by framework patch in tracker #25925
+ # [#25956] Improve accessibility in admin modules
 
 26-May-2011 Mark Dexter
  # [#25733] Direct access as no defined('_JEXEC') or die; in com_mailto/helpers/mailto.php
